# CodeEval-Pro-On-MLX

./: README.md  pyproject.toml
eval/: harness.py  inference.py  sanitize.py  strong_sanitize.py
